# syn-merge

./: .gitattributes  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: multidiff_can_reconstruct_original.rs  multidiff_does_not_crash.rs  multidiff_equals_return_same.rs
fuzz/src/: lib.rs
generate/: Cargo.toml
generate/src/: main.rs
multidiff/: Cargo.toml
multidiff/src/: lib.rs
multidiff/tests/: tests.rs
src/: lib.rs  tests.rs
syn-merge/: Cargo.toml
syn-merge/src/: lib.rs  macros.rs  proc_macro_impl.rs  syn_impl.rs  syn_impl_generated.rs
